crates/texlab/src/parser/snapshots/texlab__parser__build_log__tests__parse@002.txt.snap
---
source: src/parser/build_log.rs
expression: parse_build_log(&text)
input_file: src/parser/test_data/build_log/002.txt
---
BuildLog {
    errors: [
        BuildError {
            relative_path: "./child.tex",
            level: Error,
            message: "Undefined control sequence.",
            hint: Some(
                "\\foo",
            ),
            line: Some(
                0,
            ),
        },
    ],
}
