crates/texlab/src/parser/snapshots/texlab__parser__build_log__tests__parse@006.txt.snap
---
source: src/parser/build_log.rs
expression: parse_build_log(&text)
input_file: src/parser/test_data/build_log/006.txt
---
BuildLog {
    errors: [
        BuildError {
            relative_path: "./parent.tex",
            level: Error,
            message: "Undefined control sequence.",
            hint: Some(
                "\\foo",
            ),
            line: Some(
                6,
            ),
        },
        BuildError {
            relative_path: "./parent.tex",
            level: Error,
            message: "Missing $ inserted.",
            hint: Some(
                "\\bar",
            ),
            line: Some(
                7,
            ),
        },
        BuildError {
            relative_path: "./parent.tex",
            level: Error,
            message: "Undefined control sequence.",
            hint: Some(
                "\\baz",
            ),
            line: Some(
                8,
            ),
        },
        BuildError {
            relative_path: "./parent.tex",
            level: Error,
            message: "Missing { inserted.",
            hint: None,
            line: Some(
                9,
            ),
        },
        BuildError {
            relative_path: "./parent.tex",
            level: Error,
            message: "Missing $ inserted.",
            hint: None,
            line: Some(
                9,
            ),
        },
        BuildError {
            relative_path: "./parent.tex",
            level: Error,
            message: "Missing } inserted.",
            hint: None,
            line: Some(
                9,
            ),
        },
    ],
}
